--- a/Scripts_n_data/kalmanfilterV2.ipynb
+++ b/Scripts_n_data/kalmanfilterV2.ipynb
@@ -501,13 +501,6 @@
     "'''\n",
     "# Some values that are global\n",
     "\n",
-    "# Parameters for the robot \n",
-    "# TODO this will be pulled from ros later\n",
-    "x_vel = 0.0\n",
-    "y_vel = 0.0\n",
-    "z_vel = 0.0\n",
-    "\n",
-    "\n",
     "\n",
     "b = .235 # distance between robots wheels (meters)\n",
     "wheel_radius = 0.072 # radius of the actual wheel (meters)\n",
@@ -519,7 +512,7 @@
     "\n",
     "# Pull these from ros, page 337, displacewmnt of left and right wheel\n",
     "# ut = [delta_sl, delta_sr].T\n",
-    "#TODO these are placeholder values\n",
+    "#TODO When converting to robot version, get these update every time step\n",
     "delta_sl = 0.0\n",
     "delta_sr = 0.0\n",
     "\n",
@@ -532,8 +525,8 @@
     "                        [0]])\n",
     "# initialize covarience matrix TODO intiialize this beter\n",
     "# P_t_minus1 = 0.1\n",
-    "P_t_minus1 = np.array([[100, 0, 0],\n",
-    "                    [0, 100, 0],                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  \n",
+    "P_t_minus1 = np.array([[9, 0, 0],\n",
+    "                    [0, 9, 0],                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  \n",
     "                    [0, 0, .9]])\n",
     "\n",
     "g = 4.0"
@@ -761,13 +754,6 @@
     "    # Covariane matrix for eachlinec calculated\n",
     "    R_t = np.array(all_scan_df.loc['Covariance'])\n",
     "\n",
-    "    # print(z_t.shape)\n",
-    "    # print(z_t)\n",
-    "    # print(R_t.shape)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "    '''\n",
     "    MEASUREMENT PREDICTION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "    '''\n",
@@ -782,7 +768,14 @@
     "\n",
     "    matches, v_t_matches, sigmas_matches, H_j = matching(z_hat_t, z_t, R_t, H_j, P_hat_t, g)\n",
     "\n",
-    "\n",
+    "   \n",
+    "    print(matches)\n",
+    "    for match in matches:\n",
+    "        i = match[0]\n",
+    "        j = match[1]\n",
+    "        print('robot_measurement',z_t[:,:,i])\n",
+    "        print('world frame match',z_hat_t[:,:,j])\n",
+    "    \n",
     "    '''\n",
     "    ESTIMATION ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "    '''\n",
