--- a/Scripts_n_data/Data_Readers_Writers/Scan_SetterUpper.ipynb
+++ b/Scripts_n_data/Data_Readers_Writers/Scan_SetterUpper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "range_max        12.000000"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +472,7 @@
        "[7 rows x 82 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +898,7 @@
        "[1080 rows x 82 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1272,7 @@
        "[1080 rows x 82 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1299,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2473,7 @@
        " [1080 rows x 4 columns]]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2497,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3653,7 +3654,7 @@
        " [1080 rows x 4 columns]]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3664,7 +3665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3688,7 +3689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3701,12 +3702,12 @@
     "for i in range(len(all_data_df)):\n",
     "    tmp_df = pd.concat([tmp_df, all_data_df[i]])\n",
     "tmp_df = tmp_df\n",
-    "tmp_df.to_csv(file_path + file_name + addition + '.csv', index=False, header=True)"
+    "tmp_df.to_pickle(file_path + file_name + addition + '.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
