--- a/Scripts_n_data/Data_Readers_Writers/GT_Line_Generator.ipynb
+++ b/Scripts_n_data/Data_Readers_Writers/GT_Line_Generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     "        # Jacobian of function converting dist and angle to x and y\n",
     "\n",
     "        B = np.array([[math.cos(angle), -dist * math.sin(angle)],\n",
-    "                      [math.sin(angle), -dist * math.cos(angle)]])\n",
+    "                      [math.sin(angle), dist * math.cos(angle)]])\n",
     "        J = A @ B\n",
     "        C_l = C_l + J * C_m * J.T\n",
     "\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -404,26 +404,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Covariance</th>\n",
-       "      <td>[[0.0, 0.0], [0.0, 4.8042785325936104e-11]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 9.493428837049227e-06]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 9.034140693770945e-09]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 3.103172256187194e-07]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 2.1887479408353474e-06]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 4.804278532593612e-11]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 9.49342883704922e-06]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 9.03414069377107e-09]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 3.1031722561871673e-07]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 2.1887479408353356e-06]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 2.0116256700976887e-05]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 0.0022800572225741317]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 8.021424938466158e-09]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 2.804108146133338e-06]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 8.021424938466204e-09]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 2.804108146133342e-06]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 2.6510008484272057e-05]]</td>\n",
        "      <td>...</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 1.8994626165383423e-06]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 3.629920043200662e-13]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 0.0001045483101436447]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 3.150516069079132e-07]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 6.569204819216846e-12]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 0.5184886516393699]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 2.858268568560902e-12]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 3.150516069079135e-07]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 6.569204819216927e-12]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 0.5184886516393696]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 2.858268568560896e-12]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 2.4068430865402053e-05]]</td>\n",
-       "      <td>[[0.0, 0.0], [0.0, 3.3646509009428166e-06]]</td>\n",
+       "      <td>[[0.0, 0.0], [0.0, 3.364650900942823e-06]]</td>\n",
        "      <td>[[0.0, 0.0], [0.0, 1.696929733533779e-11]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -483,35 +483,35 @@
        "                                                                   0   \\\n",
        "Alpha                                                        0.030431   \n",
        "rhos                                                         4.564755   \n",
-       "Covariance                [[0.0, 0.0], [0.0, 4.8042785325936104e-11]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 4.804278532593612e-11]]   \n",
        "Lines_(endpoints)   [[4.567922821194644, 0.026526135490708414], [4...   \n",
        "Points_within_line  [[4.567922821194644, 0.026526135490708414], [4...   \n",
        "\n",
        "                                                                   1   \\\n",
        "Alpha                                                       -1.055935   \n",
        "rhos                                                         1.231454   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 9.493428837049227e-06]]   \n",
+       "Covariance                  [[0.0, 0.0], [0.0, 9.49342883704922e-06]]   \n",
        "Lines_(endpoints)   [[4.534856947064599, 1.1564907534906992], [4.7...   \n",
        "Points_within_line  [[4.537107253152313, 1.045464036780457], [4.53...   \n",
        "\n",
        "                                                                   2   \\\n",
        "Alpha                                                       -0.100521   \n",
        "rhos                                                         4.526373   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 9.034140693770945e-09]]   \n",
+       "Covariance                  [[0.0, 0.0], [0.0, 9.03414069377107e-09]]   \n",
        "Lines_(endpoints)   [[4.722058824466321, 1.2628161268202092], [4.7...   \n",
        "Points_within_line  [[4.567922821194644, 0.026526135490708414], [4...   \n",
        "\n",
        "                                                                   3   \\\n",
        "Alpha                                                        0.190787   \n",
        "rhos                                                         5.055715   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 3.103172256187194e-07]]   \n",
+       "Covariance                [[0.0, 0.0], [0.0, 3.1031722561871673e-07]]   \n",
        "Lines_(endpoints)   [[4.793575875562045, 2.096533569482934], [4.68...   \n",
        "Points_within_line  [[4.729945048008267, 1.939114160078688], [4.75...   \n",
        "\n",
        "                                                                   4   \\\n",
        "Alpha                                                         0.28872   \n",
        "rhos                                                         5.183727   \n",
-       "Covariance                [[0.0, 0.0], [0.0, 2.1887479408353474e-06]]   \n",
+       "Covariance                [[0.0, 0.0], [0.0, 2.1887479408353356e-06]]   \n",
        "Lines_(endpoints)   [[4.683397184842744, 2.5903083485607117], [4.6...   \n",
        "Points_within_line  [[4.7807693226373855, 2.0251191996170252], [4....   \n",
        "\n",
@@ -532,14 +532,14 @@
        "                                                                   7   \\\n",
        "Alpha                                                        0.109099   \n",
        "rhos                                                         4.134638   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 8.021424938466158e-09]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 8.021424938466204e-09]]   \n",
        "Lines_(endpoints)   [[3.6525587963711814, 4.658885611642749], [3.6...   \n",
        "Points_within_line  [[3.906165305981259, 2.5630949964343457], [3.7...   \n",
        "\n",
        "                                                                   8   \\\n",
        "Alpha                                                       -0.777425   \n",
        "rhos                                                         -0.92345   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 2.804108146133338e-06]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 2.804108146133342e-06]]   \n",
        "Lines_(endpoints)   [[3.620030772268986, 4.964283821869537], [1.61...   \n",
        "Points_within_line  [[3.629557040679627, 4.8578198053706165], [3.6...   \n",
        "\n",
@@ -574,28 +574,28 @@
        "                                                                   48  \\\n",
        "Alpha                                                       -0.425028   \n",
        "rhos                                                        -0.731852   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 3.150516069079132e-07]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 3.150516069079135e-07]]   \n",
        "Lines_(endpoints)   [[-1.253108082109124, -0.9714502210688463], [-...   \n",
        "Points_within_line  [[0.6260889160557518, 2.9093966881874467], [0....   \n",
        "\n",
        "                                                                   49  \\\n",
        "Alpha                                                        0.027212   \n",
        "rhos                                                        -1.678219   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 6.569204819216846e-12]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 6.569204819216927e-12]]   \n",
        "Lines_(endpoints)   [[-1.6636182109007238, -1.868489209873934], [-...   \n",
        "Points_within_line  [[-1.7215086294131192, 2.852828798447482], [-1...   \n",
        "\n",
        "                                                                   50  \\\n",
        "Alpha                                                       -1.440164   \n",
        "rhos                                                        11.080384   \n",
-       "Covariance                    [[0.0, 0.0], [0.0, 0.5184886516393699]]   \n",
+       "Covariance                    [[0.0, 0.0], [0.0, 0.5184886516393696]]   \n",
        "Lines_(endpoints)   [[1.5029833782082207, -10.97807221955136], [1....   \n",
        "Points_within_line  [[1.5029833782082207, -10.97807221955136], [1....   \n",
        "\n",
        "                                                                   51  \\\n",
        "Alpha                                                        0.022966   \n",
        "rhos                                                          1.36436   \n",
-       "Covariance                 [[0.0, 0.0], [0.0, 2.858268568560902e-12]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 2.858268568560896e-12]]   \n",
        "Lines_(endpoints)   [[1.6419917439164817, -10.959809206039548], [1...   \n",
        "Points_within_line  [[1.3822474908078173, 2.9480380166154387], [1....   \n",
        "\n",
@@ -609,7 +609,7 @@
        "                                                                   53  \\\n",
        "Alpha                                                       -0.677354   \n",
        "rhos                                                         3.475144   \n",
-       "Covariance                [[0.0, 0.0], [0.0, 3.3646509009428166e-06]]   \n",
+       "Covariance                 [[0.0, 0.0], [0.0, 3.364650900942823e-06]]   \n",
        "Lines_(endpoints)   [[4.40023507694544, -0.06804220991036969], [4....   \n",
        "Points_within_line  [[4.567922821194644, 0.026526135490708414], [4...   \n",
        "\n",
@@ -623,7 +623,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
