Ian did a thing

--- a/Scripts_n_data/Data_Readers_Writers/GT_Reader_and_Writer.ipynb
+++ b/Scripts_n_data/Data_Readers_Writers/GT_Reader_and_Writer.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "rows = []\n",
     "file_path = 'Data/'\n",
-    "file_name = 'CornerBoxmove'\n",
+    "file_name = 'CornerBox2'\n",
     "with open(file_path+file_name + '.csv', 'r') as file:\n",
     "    csvreader = csv.reader(file)\n",
     "    header = next(csvreader)\n",
