update scan setterupper to save versions of new collections. I would recommend no one ever change how we collect data again because it is too much to manage

--- a/Scripts_n_data/Data_Readers_Writers/Scan_SetterUpper.ipynb
+++ b/Scripts_n_data/Data_Readers_Writers/Scan_SetterUpper.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "rows = []\n",
     "file_path = 'Data/'\n",
-    "file_name = 'DownstairsScan_not_move'\n",
+    "file_name = 'RISLHallwayWithTurn'\n",
     "with open(file_path+file_name+'.csv', 'r') as file:\n",
     "    csvreader = csv.reader(file)\n",
     "    header = next(csvreader)\n",
